Bug 1260366 - Include the punctuation classes Pd and Pc in ::first-letter because the CSS Pseudo-Elements spec says so.  r=jfkthame

https://www.w3.org/TR/css-pseudo-4/#first-letter-pseudo
"Punctuation (i.e, characters that belong to the Punctuation (P*)
Unicode general category [UAX44]) that precedes or follows the first
typographic letter unit must also be included in the ::first-letter
pseudo-element."